# omikuji

./: .gitignore  README.md  pyproject.toml
src/omikuji/: command.py
